--- a/detectors/etof/CMakeLists.txt
+++ b/detectors/etof/CMakeLists.txt
@@ -5,8 +5,8 @@
 set(INCLUDE_DIRECTORIES
   ${BASE_INCLUDE_DIRECTORIES}
   ${CMAKE_SOURCE_DIR}/detectors/tof
-  ${CMAKE_SOURCE_DIR}/kalman
   ${CMAKE_SOURCE_DIR}/lhetrack
+  ${CMAKE_SOURCE_DIR}/reconstruction/tracking/kalman
   ${CMAKE_SOURCE_DIR}/simulation/mcStack
   ${CMAKE_CURRENT_LIST_DIR}
 )
