--- a/physics/photons/CMakeLists.txt
+++ b/physics/photons/CMakeLists.txt
@@ -3,10 +3,10 @@ set(INCLUDE_DIRECTORIES
   ${CMAKE_SOURCE_DIR}/core/mpdBase
   ${CMAKE_SOURCE_DIR}/core/mpdPid
   ${CMAKE_SOURCE_DIR}/detectors/emc/emcKI
-  ${CMAKE_SOURCE_DIR}/kalman
   ${CMAKE_SOURCE_DIR}/lhetrack
   ${CMAKE_SOURCE_DIR}/physics
   ${CMAKE_SOURCE_DIR}/physics/photons
+  ${CMAKE_SOURCE_DIR}/reconstruction/tracking/kalman
   ${CMAKE_SOURCE_DIR}/simulation/mcStack
 )
 
