--- a/reconstruction/tracking/kalman/CMakeLists.txt
+++ b/reconstruction/tracking/kalman/CMakeLists.txt
@@ -3,32 +3,32 @@
 # The extension is already found.  Any number of sources could be listed here.
 
 set(INCLUDE_DIRECTORIES
- ${BASE_INCLUDE_DIRECTORIES}
- ${CMAKE_SOURCE_DIR}/core/mpdBase
- ${CMAKE_SOURCE_DIR}/core/mpdField
- ${CMAKE_SOURCE_DIR}/kalman
+  ${BASE_INCLUDE_DIRECTORIES}
+  ${CMAKE_CURRENT_LIST_DIR}
+  ${CMAKE_SOURCE_DIR}/core/mpdBase
+  ${CMAKE_SOURCE_DIR}/core/mpdField
 )
 
 Set(SYSTEM_INCLUDE_DIRECTORIES
- ${ROOT_INCLUDE_DIR}
+  ${ROOT_INCLUDE_DIR}
 )
 
 include_directories(${INCLUDE_DIRECTORIES})
 
 set(LINK_DIRECTORIES
- ${ROOT_LIBRARY_DIR}
- ${FAIRROOT_LIBRARY_DIR}
+  ${ROOT_LIBRARY_DIR}
+  ${FAIRROOT_LIBRARY_DIR}
 )
- 
-link_directories( ${LINK_DIRECTORIES})
+
+link_directories(${LINK_DIRECTORIES})
 
 # List of source files
 set(SRCS
- MpdKalmanFilter.cxx
- MpdKalmanGeoScheme.cxx
- MpdKalmanHit.cxx
- MpdKalmanTrack.cxx
- MpdTpcKalmanTrack.cxx
+  MpdKalmanFilter.cxx
+  MpdKalmanGeoScheme.cxx
+  MpdKalmanHit.cxx
+  MpdKalmanTrack.cxx
+  MpdTpcKalmanTrack.cxx
 )
 
 Set(HEADERS)
