--- a/simulation/generators/genFactory/CMakeLists.txt
+++ b/simulation/generators/genFactory/CMakeLists.txt
@@ -3,8 +3,8 @@ set(INCLUDE_DIRECTORIES
   ${CMAKE_CURRENT_LIST_DIR}
   ${CMAKE_SOURCE_DIR} # needed to find gconfig/basiclibs.C
   ${CMAKE_SOURCE_DIR}/macro/mpd # needed to load loadlibs.C
-  ${CMAKE_SOURCE_DIR}/shield_pack/THadgen
-  ${CMAKE_SOURCE_DIR}/shield_pack/hadgen
+  ${CMAKE_SOURCE_DIR}/simulation/generators/shieldPack/THadgen
+  ${CMAKE_SOURCE_DIR}/simulation/generators/shieldPack/hadgen
   ${CMAKE_SOURCE_DIR}/simulation/generators
 )
 
