Moved passive to core/mpdPassive

--- a/core/mpdPassive/CMakeLists.txt
+++ b/core/mpdPassive/CMakeLists.txt
@@ -11,14 +11,14 @@
 
 Set(INCLUDE_DIRECTORIES
   ${BASE_INCLUDE_DIRECTORIES}
-  ${CMAKE_SOURCE_DIR}/passive
+  ${CMAKE_CURRENT_LIST_DIR}
 )
 
 Include_Directories(${INCLUDE_DIRECTORIES})
 
 Set(LINK_DIRECTORIES
- ${ROOT_LIBRARY_DIR}
- ${FAIRROOT_LIBRARY_DIR}
+  ${ROOT_LIBRARY_DIR}
+  ${FAIRROOT_LIBRARY_DIR}
 )
 
 Link_Directories(${LINK_DIRECTORIES})
@@ -38,9 +38,9 @@ Set(SRCS
   FairCradle.cxx
 )
 
-Set(HEADERS )
+Set(HEADERS)
 Set(LINKDEF PassiveLinkDef.h)
 Set(LIBRARY_NAME Passive)
-Set(DEPENDENCIES )
+Set(DEPENDENCIES)
 
 GENERATE_LIBRARY()
