Files inside simulation/generators moved to simulation/generators/mpdGen in order to have sources for libMpdGen inside one folder.

--- a/detectors/tpc/CMakeLists.txt
+++ b/detectors/tpc/CMakeLists.txt
@@ -8,7 +8,7 @@ set(INCLUDE_DIRECTORIES
   ${CMAKE_SOURCE_DIR}/core/mpdField
   ${CMAKE_SOURCE_DIR}/detectors/tof
   ${CMAKE_SOURCE_DIR}/reconstruction/tracking/kalman
-  ${CMAKE_SOURCE_DIR}/simulation/generators
+  ${CMAKE_SOURCE_DIR}/simulation/generators/mpdGen
   ${CMAKE_SOURCE_DIR}/simulation/mcStack
 )
 
