--- a/simulation/generators/mpdGen/CMakeLists.txt
+++ b/simulation/generators/mpdGen/CMakeLists.txt
@@ -8,15 +8,12 @@
 # IF(${req_gcc_major_vers} MATCHES "4" AND NOT ${req_gcc_minor_vers} MATCHES "0")
 # ENDIF(${req_gcc_major_vers} MATCHES "4" AND NOT ${req_gcc_minor_vers} MATCHES "0")
 
-add_subdirectory(genFactory)
-add_subdirectory(unigenFormat)
-
 set(INCLUDE_DIRECTORIES
   ${BASE_INCLUDE_DIRECTORIES}
-  ${CMAKE_SOURCE_DIR}/config
+#  ${CMAKE_SOURCE_DIR}/config
   ${CMAKE_SOURCE_DIR}/core/mpdBase
   ${CMAKE_CURRENT_LIST_DIR}
-  ${CMAKE_CURRENT_LIST_DIR}/unigenFormat
+  ${CMAKE_SOURCE_DIR}/simulation/generators/unigenFormat
   ${CMAKE_SOURCE_DIR}/simulation/mcDst
   ${CMAKE_SOURCE_DIR}/simulation/mcStack
 )
