--- a/simulation/mcStack/CMakeLists.txt
+++ b/simulation/mcStack/CMakeLists.txt
@@ -5,7 +5,7 @@
 set(INCLUDE_DIRECTORIES
   ${BASE_INCLUDE_DIRECTORIES}
   ${CMAKE_CURRENT_LIST_DIR}
-  ${CMAKE_SOURCE_DIR}/simulation/generators
+  ${CMAKE_SOURCE_DIR}/simulation/generators/mpdGen
 )
 
 include_directories( ${INCLUDE_DIRECTORIES})
