--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -86,48 +86,6 @@ build_tests:ubuntu:
     - build:ubuntu
   <<: *build_tests
 
-.deploy_template: &deploy
-  stage: deploy
-  before_script:
-    - echo "Skipping global before_script"
-  script:
-    - scripts/trigger_nicadist.sh          # new deployment via nicabuild
-    - eval $(ssh-agent -s)
-    - echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add /dev/stdin > /dev/null
-    - mkdir -p ~/.ssh && 
-    - chmod 700 ~/.ssh
-    - echo "$SSH_KNOWN_HOSTS" > ~/.ssh/known_hosts
-    - chmod 644 ~/.ssh/known_hosts
-    - rm -rf /cvmfs/nica.jinr.ru/$CI_ENVIRONMENT_NAME/mpdroot/$CI_COMMIT_REF_NAME
-    - rm -rf build
-    - mkdir build
-    - cd build
-    - source /opt/rh/devtoolset-7/enable
-    - sed -i "s/\/opt\/fairsoft\/install/\/cvmfs\/nica.jinr.ru\/$CI_ENVIRONMENT_NAME\/fairsoft\/apr21p1/g" ../SetEnv.sh
-    - sed -i "s/\/opt\/fairroot\/install/\/cvmfs\/nica.jinr.ru\/$CI_ENVIRONMENT_NAME\/fairroot\/v18.6.4/g" ../SetEnv.sh
-    - source ../SetEnv.sh
-    - echo "/cvmfs/nica.jinr.ru/$CI_ENVIRONMENT_NAME/mpdroot/$CI_COMMIT_REF_NAME"
-    - cmake -DCMAKE_INSTALL_PREFIX=/cvmfs/nica.jinr.ru/$CI_ENVIRONMENT_NAME/mpdroot/$CI_COMMIT_REF_NAME ..
-    - make -j 5
-    - make install
-    - ssh $STRATUM_0 "sudo cvmfs_server transaction nica.jinr.ru"
-    - rsync --filter='-p .cvmfscatalog' --filter='-p .cvmfsautocatalog' -a --delete /cvmfs/nica.jinr.ru/$CI_ENVIRONMENT_NAME/mpdroot/$CI_COMMIT_REF_NAME $STRATUM_0:/cvmfs/nica.jinr.ru/$CI_ENVIRONMENT_NAME/mpdroot/
-    - ssh $STRATUM_0 "sudo cvmfs_server publish nica.jinr.ru"
-    - ssh-agent -k
-  only:
-    - tags
-    - dev
-  allow_failure: false
-
-deploy:centos7:
-  image: git.jinr.ru:5005/nica/docker-images/centos7/fair:apr21p1_v18.6.4
-  environment:
-    name: centos7
-  tags:
-    - docker
-    - no-cvmfs
-  <<: *deploy
-
 codeOwners:
     image: git.jinr.ru:5005/nica/nicadist/c7:alibuild-dev
     stage: codeOwners_Permissions
@@ -188,9 +146,6 @@ check_permissions:
   only:
     - merge_requests
   allow_failure: true
-  #temporary hack to give priority for old build jobs, as they take longer
-  when: delayed
-  start_in: 10 seconds
   <<: *only-default
 
 build_nica:c7:
@@ -244,3 +199,23 @@ build_tests_nica:c8:
     - build_nica:c8
   retry: 1       # retry script if it failed (sometimes if fails due to some unexpected particle). Maximum 2 retries.
   <<: *build_tests_nica
+
+.deploy_template: &deploy
+  stage: deploy
+  before_script:
+    - echo "Skipping global before_script"
+  script:
+    - scripts/trigger_nicadist.sh          # new deployment via nicabuild
+  only:
+    - tags
+    - dev
+  allow_failure: false
+
+deploy:nicadist:
+  image: git.jinr.ru:5005/nica/nicadist/c7:alibuild-dev
+  tags:
+    - docker
+    - no-cvmfs
+  <<: *deploy
+
+
