--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -60,6 +60,7 @@
 /tools/documentation/                    @busa
 
 
-# Testing
+# TDD toolkit
 #----------------------------------------------------------------------------------
+/tools/tdd/                              @hnatics
 
