inserting interface layer between FairTask and MpdTpcClusterFinderMlem (now TpcClusterHitFinderMlem)

--- a/detectors/tpc/CMakeLists.txt
+++ b/detectors/tpc/CMakeLists.txt
@@ -56,6 +56,7 @@ set(SRCS
   TpcPoint.cxx
   TpcTimeBin.cxx
   clusterHitFinder/AbstractTpcClusterHitFinder.cxx
+  clusterHitFinder/TpcClusterHitFinderMlem.cxx
 )
 
 Set(HEADERS)
