--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -19,6 +19,7 @@
 # TPC
 /detectors/tpc/                          @zinchenk  @abychkov
 /detectors/tpc/clusterHitFinder/         @hnatics
+/detectors/tpc/geometry/                 @hnatics
 
 # FFD
 /detectors/ffd/                          @nlashmanov
