--- a/detectors/tpc/CMakeLists.txt
+++ b/detectors/tpc/CMakeLists.txt
@@ -6,6 +6,7 @@ set(INCLUDE_DIRECTORIES
   ${BASE_INCLUDE_DIRECTORIES}
   ${CMAKE_CURRENT_LIST_DIR}
   ${CMAKE_CURRENT_LIST_DIR}/clusterHitFinder
+  ${CMAKE_CURRENT_LIST_DIR}/geometry
   ${CMAKE_SOURCE_DIR}/core/mpdField
   ${CMAKE_SOURCE_DIR}/detectors/tof
   ${CMAKE_SOURCE_DIR}/reconstruction/tracking/kalman
@@ -55,6 +56,7 @@ set(SRCS
   TpcPoint.cxx
   clusterHitFinder/AbstractTpcClusterHitFinder.cxx
   clusterHitFinder/TpcClusterHitFinderMlem.cxx
+  geometry/TpcSectorGeoAZ.cxx
 )
 
 Set(HEADERS)
