rename BaseTpcGeo to BaseTpcSectorGeo in agreement with our naming conventions

--- a/detectors/tpc/CMakeLists.txt
+++ b/detectors/tpc/CMakeLists.txt
@@ -55,7 +55,7 @@ set(SRCS
   TpcPoint.cxx
   clusterHitFinder/AbstractTpcClusterHitFinder.cxx
   clusterHitFinder/TpcClusterHitFinderMlem.cxx
-  geometry/BaseTpcGeo.cxx
+  geometry/BaseTpcSectorGeo.cxx
   geometry/TpcSectorGeoAZ.cxx
 )
 
