Added a class for simplified track representation.
Signed-off-by: Alexander Kamkin <kamkin@ispras.ru>

--- a/reconstruction/acts-tracking/CMakeLists.txt
+++ b/reconstruction/acts-tracking/CMakeLists.txt
@@ -59,6 +59,7 @@ set(SRCS
   MpdTpcMagneticField.cxx
   MpdTpcRunner.cxx
   MpdTpcSpacePointMaking.cxx
+  MpdTpcTrack.cxx
   MpdTpcTrackEstimation.cxx
   MpdTpcTrackFinding.cxx
   MpdTpcTrackSeeding.cxx
@@ -94,6 +95,7 @@ Set(HEADERS
   MpdTpcMagneticField.h
   MpdTpcRunner.h
   MpdTpcSpacePointMaking.h
+  MpdTpcTrack.h
   MpdTpcTrackEstimation.h
   MpdTpcTrackFinding.h
   MpdTpcTrackSeeding.h
