adding BaseTpcDigit class

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -20,6 +20,7 @@
 /detectors/tpc/                          @zinchenk  @abychkov
 /detectors/tpc/clusterHitFinder/         @hnatics
 /detectors/tpc/clusterHitFinder/fast     @kryman @akrylov 
+/detectors/tpc/digitizer/                @hnatics
 /detectors/tpc/geometry/                 @hnatics
 
 # FFD
