inserting AbstractTpcHit interface and adapting MpdTpcHit

--- a/reconstruction/tracking/lheTrack/CMakeLists.txt
+++ b/reconstruction/tracking/lheTrack/CMakeLists.txt
@@ -7,6 +7,7 @@ set(INCLUDE_DIRECTORIES
   ${CMAKE_SOURCE_DIR}/core/mpdField 
   ${CMAKE_SOURCE_DIR}/detectors/sts
   ${CMAKE_SOURCE_DIR}/detectors/tpc
+  ${CMAKE_SOURCE_DIR}/detectors/tpc/clusterHitFinder
   ${CMAKE_SOURCE_DIR}/detectors/tpc/geometry
   ${CMAKE_SOURCE_DIR}/reconstruction/tracking/kalman
   ${CMAKE_SOURCE_DIR}/simulation/mcStack
