TPC API preparation: move Mlem algorithm dependencies & MpdHitProducer into libtpcClusterHitFinder.so. Use Mlem interface port by default

--- a/detectors/emc/CMakeLists.txt
+++ b/detectors/emc/CMakeLists.txt
@@ -12,6 +12,7 @@ set(INCLUDE_DIRECTORIES
   ${CMAKE_SOURCE_DIR}/core/mpdBase
   ${CMAKE_SOURCE_DIR}/detectors/tpc
   ${CMAKE_SOURCE_DIR}/detectors/tpc/clusterHitFinder
+  ${CMAKE_SOURCE_DIR}/detectors/tpc/clusterHitFinder/mlem
   ${CMAKE_SOURCE_DIR}/detectors/tpc/digitizer
   ${CMAKE_SOURCE_DIR}/detectors/tpc/digitizer/AZlt
   ${CMAKE_SOURCE_DIR}/reconstruction/tracking/kalman
