--- a/reconstruction/tracking/lheTrack/CMakeLists.txt
+++ b/reconstruction/tracking/lheTrack/CMakeLists.txt
@@ -8,6 +8,7 @@ set(INCLUDE_DIRECTORIES
   ${CMAKE_SOURCE_DIR}/detectors/sts
   ${CMAKE_SOURCE_DIR}/detectors/tpc
   ${CMAKE_SOURCE_DIR}/detectors/tpc/clusterHitFinder
+  ${CMAKE_SOURCE_DIR}/detectors/tpc/clusterHitFinder/mlem
   ${CMAKE_SOURCE_DIR}/detectors/tpc/fairTpc
   ${CMAKE_SOURCE_DIR}/detectors/tpc/geometry
   ${CMAKE_SOURCE_DIR}/reconstruction/tracking/kalman
