TPC API preparation: encapsulate MpdTPCPid & MpdParticleIdentification into libtpcPid.so. MpdParticleIdentification placement is temporary to create place for TPC API. It belongs somewhere else as it is also TOF dependent.

--- a/core/mpdDst/CMakeLists.txt
+++ b/core/mpdDst/CMakeLists.txt
@@ -10,7 +10,7 @@ set(INCLUDE_DIRECTORIES
   ${CMAKE_SOURCE_DIR}/core/mpdField
   ${CMAKE_SOURCE_DIR}/core/mpdPid
   ${CMAKE_SOURCE_DIR}/detectors/emc/emcKI
-  ${CMAKE_SOURCE_DIR}/detectors/tpc
+  ${CMAKE_SOURCE_DIR}/detectors/tpc/pid
   ${CMAKE_SOURCE_DIR}/detectors/tof
   ${CMAKE_SOURCE_DIR}/detectors/zdc
   ${CMAKE_SOURCE_DIR}/reconstruction/tracking/kalman
@@ -42,6 +42,6 @@ set(SRCS
 Set(HEADERS)
 Set(LINKDEF MpdDstLinkDef.h)
 Set(LIBRARY_NAME MpdDst)
-Set(DEPENDENCIES MpdMiniEvent)
+Set(DEPENDENCIES MpdMiniEvent tpcPid)
 
 GENERATE_LIBRARY()
